<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CafeFinder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_done">완료</string>
    <string name="app_title">CAFE FINDER APP</string>
    <string name="find_cafe">카페 찾기</string>
    <string name="list_cafe">나의 카페 리스트</string>
    <string name="cafe_name">Name</string>
    <string name="cafe_addr">Address</string>
    <string name="cafe_phonenum">Phone Number</string>
    <string name="cafe_menu">Menu</string>
    <string name="image">ImageView</string>
    <string name="reg">내카페 등록</string>
    <string name="opi">의견보기</string>
    <string name="opi_point">별점</string>
    <string name="opi_comm">의견</string>
    <string name="dial_ok">등록</string>
    <string name="edittext">EditText</string>
    <string name="opi_reg">의견쓰기</string>
    <string name="unreg">내카페해제</string>

</resources>
