<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cafe_back"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cafe_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cafe_addr" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cafe_phonenum" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cafe_menu" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="103dp" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/opi" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/button1"
                    android:layout_alignBottom="@+id/button1"
                    android:layout_toRightOf="@+id/button1"
                    android:text="@string/unreg" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button2"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="22dp"
                    android:text="@string/reg" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
